# centy-installer

./: .gitignore  Cargo.toml  install.sh  package.json
.github/workflows/: ci.yml  release.yml
scripts/: install.js
src/: error.rs  installer.rs  lib.rs  main.rs  paths.rs  project.rs  version.rs
