[package]
name = "centy-installer"
version = "0.1.0"
edition = "2021"
description = "Installer for Centy TUI and TUI Manager binaries"
authors = ["Centy"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "6"
indicatif = "0.17"
futures-util = "0.3"
flate2 = "1"
tar = "0.4"
tempfile = "3"
zip = "2"
