[package]
name = "centy"
version = "0.1.0"
edition = "2021"
description = "Centy CLI - Install and run Centy tools"
authors = ["Centy"]
repository = "https://github.com/centy-io/centy-installer"
license = "MIT"

[[bin]]
name = "centy"
path = "src/main.rs"

[lib]
name = "centy_installer"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "6"
indicatif = "0.17"
futures-util = "0.3"
flate2 = "1"
tar = "0.4"
tempfile = "3"
zip = "2"
